fix environment and package-lock file update

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "npm run build:css && react-scripts start",
@@ -37,6 +37,6 @@
   "devDependencies": {
     "autoprefixer": "^9.8.5",
     "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^3.2.7"
   }
 }
